# cynic

./: .gitignore  LICENSE  README.md  cynic.py  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
tests/: test_cynic.py
